--- a/app-source/scss/app.scss
+++ b/app-source/scss/app.scss
@@ -1,6 +1,7 @@
 @import '../../node_modules/reset-css/sass/reset';
 @import 'partials/vars-and-mixins';
-@import 'partials/graphics';
+@import 'partials/png';
+@import 'partials/svg';
 
 @import 'partials/body';
 @import 'partials/interface';
