--- a/app-source/scss/prefs.scss
+++ b/app-source/scss/prefs.scss
@@ -1,6 +1,6 @@
 @import '../../node_modules/reset-css/sass/reset';
 @import 'partials/vars-and-mixins';
-@import 'partials/graphics';
+@import 'partials/svg';
 
 @import 'partials/body';
 @import 'partials/prefs';
