--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -13,6 +13,11 @@
 	--header-border:		#b5b4b5;
 	--form-control:			#409BFF;
 	
+	// toolbar
+	
+	--toolbar-hover:		rgba(0,0,0,.05);
+	--toolbar-border:		rgba(69,69,69,.5);
+	
 	// edit					
 	
 	--edit: 				#ffffff;
@@ -64,6 +69,11 @@
 	--header:				linear-gradient(#4b4b4b, #3d3d3d) no-repeat border-box;
 	--header-border:		#000000;
 	--form-control:			#4D89F5;
+	
+	// toolbar
+	
+	--toolbar-hover:		rgba(255,255,255,.05);
+	--toolbar-border:		rgba(255,255,255,.3);
 	
 	// edit
 	
