--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -12,6 +12,7 @@
 	--header:				linear-gradient(#edebed, #d6d4d6) no-repeat border-box;
 	--header-border:		#b5b4b5;
 	--form-control:			#409BFF;
+	--categories:			#edebed;
 	
 	// toolbar
 	
@@ -69,6 +70,7 @@
 	--header:				linear-gradient(#4b4b4b, #3d3d3d) no-repeat border-box;
 	--header-border:		#000000;
 	--form-control:			#4D89F5;
+	--categories:			#1e1e1e;
 	
 	// toolbar
 	
