--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -64,18 +64,68 @@ footer {
 	
 	&.slide { left: 0; }
 	
+	#cat-title {
+		
+		display: block;
+		font-size: 12px;
+		font-weight: 500;
+		color: var(--text-light);
+		padding: 10px;
+	}
+	
+	ul:first-of-type { margin-bottom: 16px; }
+	
 	button {
 		
 		border: 0;
 		border-radius: 0;
 		width: 100%;
+		padding: 0 10px 0 30px;
 		text-align: left;
-		color: #fff;
+		color: var(--text);
 		background-color: transparent;
+		font-size: 14px;
+		line-height: 24px;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 		
 		transition: background-color .15s;
 		
+		&.selected {
+			
+			color: #fff;
+			background-color: var(--accent);
+		}
+		
 		&:focus { outline: none; }
+	}
+	
+	#fixed-categories {
+		
+		button {
+			
+			background-position: left 8px center;
+			background-repeat: no-repeat;
+			
+			&#cat-all	{ background-image: var(--all); }
+			&#cat-fav	{ background-image: var(--favorite); }
+			&#cat-none	{
+				
+				background-image: var(--none);
+				background-position-x: 10px;
+			}
+		}
+	}
+	
+	#categories {
+		
+		button {
+			
+			background-image: var(--category);
+			background-position: left 8px center;
+			background-repeat: no-repeat;
+		}
 	}
 }
 
@@ -176,7 +226,7 @@ aside {
 	button {
 		
 		width: 100%;
-		height: 55px;
+		padding: 11px 0;
 		display: block;
 		border: 0;
 		border-radius: 0;
@@ -229,6 +279,15 @@ aside {
 			.excerpt { color: var(--text-light); }
 		}
 		
+		.side-cat {
+			
+			font-size: 12px;
+			padding: 2px 0 0 44px;
+			color: var(--text-light);
+			background: var(--category) no-repeat left 25px top 4px;
+			display: none;
+		}
+		
 		&[data-favorite="true"] {
 			
 			.side-title::before {
@@ -263,6 +322,22 @@ aside {
 		&.above-selected {
 			
 			&::after { display: none; }
+		}
+	}
+	
+	&.showcats {
+		
+		button {
+			
+			.side-cat { display: block; }
+		}
+	}
+	
+	&.hidecats {
+		
+		button {
+			
+			.side-cat { display: none; }
 		}
 	}
 }
@@ -423,7 +498,8 @@ aside {
 				
 				span { color: white; }
 				
-				.excerpt { color: var(--text-light); }
+				.excerpt,
+				.side-cat { color: var(--text-light); }
 			}
 		}
 	}
