--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -55,6 +55,33 @@
 	--table-border:			#dddddd;
 	--table-head:			#ffffff;
 	--table-stripe:			rgba(69,69,69,.03);
+	
+	// editor
+	
+	--md-red-lt:			#fb434a;
+	--md-red-dk:			#af2e33;
+	--md-orange-lt:			#ffa657; //#f27e17;
+	--md-orange-dk:			#a85710;
+	--md-yellow-lt:			#fecb57;
+	--md-yellow-dk:			#b18d3c;
+	--md-aqua-lt:			#50e3c2;
+	--md-aqua-dk:			#379e87;
+	--md-green-lt:			#18bf64;
+	--md-green-dk:			#108545;
+	--md-khaki-lt:			#63a35c;
+	--md-khaki-dk:			#457140;
+	--md-cyan-lt:			#3d9fc7;
+	--md-cyan-dk:			#2a6e8a;
+	--md-blue-lt:			#007cff;
+	--md-blue-dk:			#0056b2;
+	--md-indigo-lt:			#0058b3;
+	--md-indigo-dk:			#003d7c;
+	--md-purple-lt:			#9013fe;
+	--md-purple-dk:			#640db1;
+	--md-pink-lt:			#ff42f6;
+	--md-pink-dk:			#b22eab;
+	--md-grey-lt:			#acbbd0;
+	--md-grey-dk:			#788291;
 }
 
 
