--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -49,7 +49,7 @@
 	
 	--link:					#1e90ff;
 	--hover:				#005ee0;
-	--code:					#e6e6e6;
+	--code:					#ebebeb;
 	--code-color:			#777777;
 	--mark:					#000000;
 	--table-border:			#dddddd;
@@ -58,30 +58,30 @@
 	
 	// editor
 	
-	--md-red-lt:			#fb434a;
-	--md-red-dk:			#af2e33;
-	--md-orange-lt:			#ffa657; //#f27e17;
-	--md-orange-dk:			#a85710;
-	--md-yellow-lt:			#fecb57;
-	--md-yellow-dk:			#b18d3c;
-	--md-aqua-lt:			#50e3c2;
-	--md-aqua-dk:			#379e87;
-	--md-green-lt:			#18bf64;
-	--md-green-dk:			#108545;
-	--md-khaki-lt:			#63a35c;
-	--md-khaki-dk:			#457140;
-	--md-cyan-lt:			#3d9fc7;
-	--md-cyan-dk:			#2a6e8a;
-	--md-blue-lt:			#007cff;
-	--md-blue-dk:			#0056b2;
-	--md-indigo-lt:			#0058b3;
-	--md-indigo-dk:			#003d7c;
-	--md-purple-lt:			#9013fe;
-	--md-purple-dk:			#640db1;
-	--md-pink-lt:			#ff42f6;
-	--md-pink-dk:			#b22eab;
-	--md-grey-lt:			#acbbd0;
-	--md-grey-dk:			#788291;
+	--code-red-lt:			#fb434a;
+	--code-red-dk:			#af2e33;
+	--code-orange-lt:			#ffa657; //#f27e17;
+	--code-orange-dk:			#a85710;
+	--code-yellow-lt:			#fecb57;
+	--code-yellow-dk:			#b18d3c;
+	--code-aqua-lt:			#50e3c2;
+	--code-aqua-dk:			#379e87;
+	--code-green-lt:			#18bf64;
+	--code-green-dk:			#108545;
+	--code-khaki-lt:			#63a35c;
+	--code-khaki-dk:			#457140;
+	--code-cyan-lt:			#3d9fc7;
+	--code-cyan-dk:			#2a6e8a;
+	--code-blue-lt:			#007cff;
+	--code-blue-dk:			#0056b2;
+	--code-indigo-lt:			#0058b3;
+	--code-indigo-dk:			#003d7c;
+	--code-purple-lt:			#9013fe;
+	--code-purple-dk:			#640db1;
+	--code-pink-lt:			#ff42f6;
+	--code-pink-dk:			#b22eab;
+	--code-grey-lt:			#acbbd0;
+	--code-grey-dk:			#788291;
 }
 
 
@@ -133,7 +133,7 @@
 	// note
 	
 	--code:					#1e1e1e;
-	--code-color:			#aaaaaa;
+	--code-color:			#ffffff;
 	--table-border:			#484848;
 	--table-head:			#484848;
 	--table-stripe:			rgba(255,255,255,.03);
