--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -21,6 +21,24 @@ header {
 	left: 0;
 	right: 0;
 	-webkit-app-region: drag;
+	
+	#update {
+		
+		position: absolute;
+		top: 2px;
+		right: 2px;
+		height: 15px;
+		font-size: 11px;
+		font-weight: 500;
+		color: #fff;
+		background-color: #6236FF;
+		border: 0;
+		border-radius: 3px;
+		display: none;
+		
+		&:active { background-color: #9164FF; }
+		&:focus { outline: none; }
+	}
 }
 
 #time {
