--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -259,10 +259,10 @@ aside {
 
 #divider {
 
-	width: 5px;
+	width: 6px;
 	position: absolute;
 	top: 0;
-	right: -2px;
+	right: 0;
 	bottom: 0;
 	cursor: col-resize;
 	z-index: 1000;
