--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -70,7 +70,6 @@ footer {
 	
 	width: 200px;
 	border-right: 1px solid var(--dividers);
-	background-color: var(--categories);
 	position: absolute;
 	top: 23px;
 	left: -200px;
@@ -133,6 +132,16 @@ footer {
 				background-image: var(--none);
 				background-position-x: 10px;
 			}
+			
+			&.selected {
+				
+				&#cat-all	{ background-image: var(--all-selected); }
+				&#cat-fav	{ background-image: var(--favorite-selected); }
+				&#cat-none	{
+					
+					background-image: var(--none-selected);
+				}
+			}
 		}
 	}
 	
@@ -143,6 +152,11 @@ footer {
 			background-image: var(--category);
 			background-position: left 8px center;
 			background-repeat: no-repeat;
+			
+			&.selected {
+				
+				background-image: var(--category-selected);
+			}
 		}
 	}
 }
@@ -173,7 +187,7 @@ main {
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background: rgba(255,0,0,.6) var(--texture) repeat center center;
+		background: var(--texture) repeat center center;
 		z-index: 1;
 		
 		.spinner {
@@ -470,32 +484,23 @@ aside {
 
 
 
-//note(@duncanmid): retina
-
-@media screen and (-webkit-min-device-pixel-ratio: 2) { 
-		
-	#frame,
-	.editor-preview {
-		
-		background-image: var(--texture2);
-		background-size: 100px 100px;
-	}
-}
-
-
-
 //note(@duncanmid): dark theme
 
 [data-theme="dark"] {
 	
+	#frame {
+		
+		background-image: none;
+	}
+	
 	footer {
 		
-		background-image: var(--texture2);
-		background-size: 100px 100px;
 		border-right: 1px solid var(--header-border);
 	}
 	
 	main {
+		
+		background-image: var(--texture);
 		
 		#edit {
 			
@@ -525,8 +530,7 @@ aside {
 	aside {
 		
 		border-right: 1px solid var(--header-border);
-		background-image: none;
-		background-color: #1E1E1E;
+		background-color: rgba(30,30,30,.75);
 	}
 	
 	#sidebar {
@@ -557,6 +561,65 @@ aside {
 		.CodeMirror-cursor {
 		
 			border-left: 1px solid white;
+		}
+	}
+}
+
+
+
+//note(@duncanmid): user themes
+
+[data-user="light"] {
+	
+	footer { background-color: #edebed; }
+}
+
+[data-user="dark"] {
+	
+	footer {
+		
+		background-color: #1e1e1e;
+		background-image: var(--texture);
+	}
+}
+
+
+
+//note(@duncanmid): retina
+
+@media screen and (-webkit-min-device-pixel-ratio: 2) { 
+		
+	#frame,
+	.editor-preview {
+		
+		background-image: var(--texture2);
+		background-size: 100px 100px;
+	}
+	
+	main {
+		
+		.loader {
+			
+			background: var(--texture2) repeat center center;
+			background-size: 100px 100px;
+		}
+	}
+	
+	[data-theme="dark"] {
+		
+		main {
+			
+			background-image: var(--texture2);
+			background-size: 100px 100px;
+		}
+	}
+	
+	[data-user="dark"] {
+		
+		footer {
+			
+			background-image: var(--texture2);
+			background-size: 100px 100px;
 		}
 	}
 }
