--- a/app-source/scss/partials/_about.scss
+++ b/app-source/scss/partials/_about.scss
@@ -1,5 +1,5 @@
 
-//note(@duncanmid): common / light theme
+//note(dgmid): common / light theme
 
 body {
 	
@@ -85,7 +85,7 @@ body {
 }
 
 
-//note(@duncanmid): @2x
+//note(dgmid): @2x
 
 @media screen and (-webkit-min-device-pixel-ratio: 2) { 
 	
