--- a/app-source/scss/partials/_code-styles.scss
+++ b/app-source/scss/partials/_code-styles.scss
@@ -1,5 +1,5 @@
 
-//note(@duncanmid): markdown light
+//note(dgmid): markdown light
 
 .cm-comment,
 .cm-bracket,
@@ -41,7 +41,7 @@
 }
 
 
-//note(@duncanmid): markdown dark
+//note(dgmid): markdown dark
 
 [data-theme="dark"] {
 	
@@ -88,7 +88,7 @@
 
 // frontend
 
-//note(@duncanmid): base - javascript
+//note(dgmid): base - javascript
 
 [data-theme="light"] {
 	
@@ -200,7 +200,7 @@
 }
 
 
-//note(@duncanmid): json
+//note(dgmid): json
 
 [data-theme="light"] {
 	
@@ -224,7 +224,7 @@
 	}
 }
 
-//note(@duncanmid): html
+//note(dgmid): html
 
 [data-theme="light"] {
 	
@@ -256,7 +256,7 @@
 	}
 }
 
-//note(@duncanmid): css & scss
+//note(dgmid): css & scss
 
 [data-theme="light"],
 [data-theme="dark"] {
@@ -293,7 +293,7 @@
 	}
 }
 
-//note(@duncanmid): php
+//note(dgmid): php
 
 [data-theme="light"] {
 	
@@ -317,7 +317,7 @@
 	}
 }
 
-//note(@duncanmid): objective-c
+//note(dgmid): objective-c
 
 [data-theme="light"] {
 	
@@ -333,7 +333,7 @@
 	}
 }
 
-//note(@duncanmid): c like
+//note(dgmid): c like
 
 [data-theme="light"] {
 	
@@ -349,7 +349,7 @@
 	}
 }
 
-//note(@duncanmid): bash
+//note(dgmid): bash
 
 [data-theme="light"] {
 	
