--- a/app-source/scss/partials/_forms.scss
+++ b/app-source/scss/partials/_forms.scss
@@ -1,5 +1,5 @@
 
-//note(@duncanmid): common / light theme
+//note(dgmid): common / light theme
 
 header {
 	
@@ -97,7 +97,7 @@ footer {
 }
 
 
-//note(@duncanmid): dark theme
+//note(dgmid): dark theme
 
 [data-theme="dark"] {
 	
@@ -108,7 +108,7 @@ footer {
 	}
 }
 
-//note(@duncanmid): user themes
+//note(dgmid): user themes
 
 [data-user="light"] {
 	
