--- a/app-source/scss/partials/_note.scss
+++ b/app-source/scss/partials/_note.scss
@@ -1,5 +1,5 @@
 
-//note(@duncanmid): common / light theme
+//note(dgmid): common / light theme
 
 .CodeMirror-code {
 	
@@ -185,7 +185,7 @@
 }
 
 
-//note(@duncanmid): dark theme
+//note(dgmid): dark theme
 
 [data-theme="dark"] {
 	
