--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -1,5 +1,5 @@
 
-//note(@duncanmid): common / light theme
+//note(dgmid): common / light theme
 
 body {
 	
@@ -453,8 +453,17 @@ aside {
 		
 		cursor: default;
 		font-size: 15px;
-		color: var(--text);
 		transition: all .3s;
+		
+		i {
+			
+			display: block;
+			width: 28px;
+			height: 28px;
+			background-color: var(--text);
+			background-repeat: no-repeat;
+			background-position: center center;
+		}
 		
 		&:hover {
 			
@@ -467,6 +476,19 @@ aside {
 			background-color: var(--app-light);
 			border-color: var(--app-light);
 		}
+		
+		&.icon-heading i { mask: var(--icon-heading) no-repeat center center; }
+		&.icon-b i { mask: var(--icon-b) no-repeat center center; }
+		&.icon-i i { mask: var(--icon-i) no-repeat center center; }
+		&.icon-del i { mask: var(--icon-del) no-repeat center center; }
+		&.icon-ul i { mask: var(--icon-ul) no-repeat center top 7px; }
+		&.icon-ol i { mask: var(--icon-ol) no-repeat center center; }
+		&.icon-a i { mask: var(--icon-a) no-repeat center center; }
+		&.icon-img i { mask: var(--icon-img) no-repeat center center; }
+		&.icon-code i { mask: var(--icon-code) no-repeat center center; }
+		&.icon-blockquote i { mask: var(--icon-blockquote) no-repeat center center; }
+		&.icon-table i { mask: var(--icon-table) no-repeat center center; }
+		&.icon-hr i { mask: var(--icon-hr) no-repeat center center; }
 	}
 	
 	i.separator {
@@ -484,7 +506,7 @@ aside {
 
 
 
-//note(@duncanmid): dark theme
+//note(dgmid): dark theme
 
 [data-theme="dark"] {
 	
@@ -578,7 +600,7 @@ aside {
 
 
 
-//note(@duncanmid): user themes
+//note(dgmid): user themes
 
 [data-user="light"] {
 	
@@ -600,7 +622,7 @@ aside {
 }
 
 
-//note(@duncanmid): accent text color
+//note(dgmid): accent text color
 
 [data-select] {
 	
@@ -635,7 +657,7 @@ aside {
 		
 			&.active {
 				
-				color: #fff;
+				i { background-color: #fff; }
 			}
 		}
 	}
@@ -643,7 +665,7 @@ aside {
 
 
 
-//note(@duncanmid): retina
+//note(dgmid): retina
 
 @media screen and (-webkit-min-device-pixel-ratio: 2) { 
 		
